--- a/Peak/war/index.html
+++ b/Peak/war/index.html
@@ -20,7 +20,7 @@
         <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
       </tr>
       <tr>
-        <td><a href="peak">Peak</a></td>
+        <td><a href="region">Regions</a></td>
       </tr>
     </table>
   </body>
