updated index page

--- a/Peak/war/index.html
+++ b/Peak/war/index.html
@@ -13,15 +13,11 @@
   </head>
 
   <body>
-    <h1>Hello App Engine!</h1>
+    <h1>Hello Welcome to the Climber's Achievement DataBase!</h1>
 	
-    <table>
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
-      </tr>
-      <tr>
-        <td><a href="region">Regions</a></td>
-      </tr>
-    </table>
+    <h2>Please see all available regions here: </h2>
+     
+    <h3><a href="region">All available Regions</a></h3>
+      
   </body>
 </html>
